Modificando index y NavBar

--- a/AspNetCoreTodo/Views/Home/Index.cshtml
+++ b/AspNetCoreTodo/Views/Home/Index.cshtml
@@ -2,7 +2,26 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+@* <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+</div> *@
+
+<div class="container">
+    <div class="text-center">
+        <h1 class="display-4">Bienvenido a Huerta Familiar</h1>
+    </div>
+    <br>
+    <p>Una aplicacion pensada para que, te animes a construir una pequeña huerta</p>
+    <p>en tu hogar, para que puedas disfrutar de una alimentacion saludable y auto sustentable</p>
+
+</div>
+<div class="clearfix">
+  <img src="https://i.pinimg.com/564x/ec/3a/1f/ec3a1f097645dc6c0cd52a49cce8fdf3.jpg" class="col-md-6 float-md-end mb-3 ms-md-3 img" alt="...">
+
+  <p>
+    Uno de los materiales más habituales para la construcción de este tipo de jardineras es la madera, por su ligereza y porque es fácil de reciclar, tal vez su punto débil sea la durabilidad debido a las humedades que le pueden afectar, aunque siempre se le puede dar un tratamiento preventivo. Aquí podéis ver algunos modelos de pequeños huertos realizados en madera:
+    Disfrutar de alimentos frescos cultivados por nosotros mismos en casa, es una experiencia muy satisfactoria repleta de ventajas y beneficios para nuestra salud. Aunque no dispongamos de un terreno para cultivar se pueden hacer diferentes estructuras o soportes para poder disponer de un pequeño huerto de uso familiar. 
+  </p>
+
 </div>
