--- a/AspNetCoreTodo/wwwroot/css/site.css
+++ b/AspNetCoreTodo/wwwroot/css/site.css
@@ -1,7 +1,18 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+/* body{
+  font-family:'Open Sans', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+} */
+body{
+  background-color: #F2E9E1;
+}
+
 a.navbar-brand {
+  font-family: 'Open Sans', sans-serif;
+  font-style: italic;
   white-space: normal;
   text-align: center;
   word-break: break-all;
